--- a/website/jobs/templates/jobs/job_list.html
+++ b/website/jobs/templates/jobs/job_list.html
@@ -5,7 +5,7 @@
     <div class="section">
         <div class="container">
             <div class="columns">
-                <div class="column is-3 is-pulled-left is-hidden-touch">
+                <div class="column is-3 is-pulled-left">
                     <p class="title is-5">Find An Opening For You:</p>
                     <div class='field'>
                         <form method="get">
@@ -39,12 +39,11 @@
                     <hr>
                     <p class="title is-6 mt-4">Workplace Culture@KKK</p><br>
                     <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque iaculis lacus vitae tincidunt mattis. In vel sapien ullamcorper, dictum magna et, elementum ex. Nullam arcu mi, finibus et diam eu, consequat dapibus magna. Maecenas faucibus purus lorem, at posuere nulla blandit quis. Vestibulum sed pharetra orci, ac laoreet ex. Praesent.
-                    </p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin efficitur non neque rutrum pretium. Vivamus dictum hendrerit mauris eu imperdiet. Donec efficitur consequat lectus, et volutpat lectus condimentum quis. Suspendisse.                    </p>
                 </div>
                 <div class="column is-8 is-offset-1">
-                    <h1 class="title is-3">Current Openings</h1>
-                    <p class="subtitle is-4">In The RFF</p>
+                    <h1 class="title is-3 mt-3">Current Openings</h1>
+                    <p class="subtitle is-4 mt-2 mb-3">In The RFF</p>
                     {% for job in filter.qs %}
                         <article class="media box">
                             <figure class="media-left">
