--- a/website/app_profile/templates/app_profile/home.html
+++ b/website/app_profile/templates/app_profile/home.html
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="columns">
             {% if jobapplication_list %}
-                <div class="column is-4 is-6-tablet is-hidden-mobile">
+                <div class="column is-6-tablet">
                 {% for japp in jobapplication_list|slice:':1' %}
                     <div class="card">
                     <div class="card-content">
